--- a/MyCity4Kids/MyCity4Kids/res/drawable/profile_featured_collection_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/profile_featured_collection_bg.xml
@@ -2,14 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/app_light_black" />
+        android:color="@color/grey_faded" />
 
-    <solid android:color="@color/app_grey" />
+    <solid android:color="@color/light_grey1" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
+        android:bottom="1dp"
         android:top="1dp" />
-    <corners android:radius="3dp" />
+    <corners android:radius="16dp" />
 
 </shape>
