--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_shimmer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_shimmer_layout.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/shimmerProfileImageView"
         android:background="@color/background"
-        android:drawableStart="@drawable/tab1" />
+        android:drawableStart="@drawable/ic_profile_location" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/shimmerAuthorBioTextView"
