--- a/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
@@ -112,18 +112,19 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/profileImageView"
                             android:gravity="center"
-                            android:lines="2"
                             android:paddingStart="16dp"
                             android:paddingEnd="16dp"
                             android:text="@string/random_text" />
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/contentLangTextView"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/authorBioTextView"
+                            android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:drawableStart="@drawable/profile_solid_square"
+                            android:drawablePadding="10dp"
                             android:gravity="center"
                             android:text="dwadad" />
 
