--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_profile_bookmark.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_profile_bookmark.xml
@@ -2,8 +2,10 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tintMode="multiply"
+    android:tint="@color/profile_tab_selector">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/white"
       android:pathData="M20.2,2.7c-0.2,-0.2 -0.4,-0.4 -0.7,-0.5C19.3,2 19.1,2 18.9,2H5.1C4.9,2 4.7,2 4.5,2.1C4.2,2.2 4,2.4 3.8,2.7C3.6,2.9 3.5,3.2 3.5,3.5v17c0,0.3 0.1,0.6 0.3,0.8c0.2,0.2 0.4,0.4 0.7,0.5C4.7,22 4.9,22 5.1,22c0.4,0 0.8,-0.1 1.1,-0.4L12,16l5.8,5.6c0.3,0.3 0.7,0.4 1.1,0.4c0.2,0 0.4,0 0.6,-0.1c0.3,-0.1 0.5,-0.3 0.7,-0.5c0.2,-0.2 0.3,-0.5 0.3,-0.8v-17C20.5,3.2 20.4,2.9 20.2,2.7L20.2,2.7zM18.8,20.1l-5.6,-5.4L12,13.6l-1.2,1.1l-5.6,5.4V3.7h13.5V20.1zM18.8,20.1"/>
 </vector>
