--- a/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
@@ -2,11 +2,13 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/app_light_grey">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/app_light_grey">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -18,6 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="?attr/actionBarSize"
+                android:background="@color/app_light_grey"
                 app:layout_collapseMode="parallax">
 
                 <FrameLayout
@@ -315,7 +318,8 @@
                     android:id="@+id/myCollectionsWidget"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/headerCardView" />
+                    android:layout_below="@+id/headerCardView"
+                    android:background="@color/app_light_grey" />
             </RelativeLayout>
 
             <androidx.appcompat.widget.Toolbar
@@ -349,7 +353,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:paddingLeft="5dp"
                         android:paddingTop="5dp"
@@ -362,19 +365,20 @@
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        IF YOU WANT TO KEEP "Choose Item" always on top of the RecyclerView, put this TextView here
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:background="@color/white"
-            android:padding="5dp">
+            android:elevation="5dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
 
             <ImageView
                 android:id="@+id/creatorTab"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/profile_creator_tab_selector"
+                android:src="@drawable/ic_profile_creator"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/divider1"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -384,7 +388,7 @@
             <View
                 android:id="@+id/divider1"
                 android:layout_width="1dp"
-                android:layout_height="10dp"
+                android:layout_height="30dp"
                 android:background="@color/grey_faded"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/featuredTab"
@@ -394,20 +398,19 @@
 
             <ImageView
                 android:id="@+id/featuredTab"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/profile_featured_tab_selector"
+                android:src="@drawable/ic_profile_featured"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/divider2"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/divider1"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <View
                 android:id="@+id/divider2"
                 android:layout_width="1dp"
-                android:layout_height="10dp"
+                android:layout_height="30dp"
                 android:background="@color/grey_faded"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bookmarksTab"
@@ -417,9 +420,9 @@
 
             <ImageView
                 android:id="@+id/bookmarksTab"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/profile_bookmarks_tab_selector"
+                android:src="@drawable/ic_profile_bookmark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
