--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -4,6 +4,7 @@
     <color name="app_light_black">#545454</color>
     <color name="app_dark_black">#333333</color>
     <color name="app_grey">#9c9dac</color>
+    <color name="app_light_grey">#f9f9f9</color>
     <color name="app_blue">#507cbe</color>
     <color name="app_pink">#FF4081</color>
     <color name="app_red">#D54058</color>
