--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_report_spam.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_report_spam.xml
@@ -43,7 +43,7 @@
                 android:text="@string/report_spams"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                app:fontName="Roboto-Bold.ttf" />
+                android:textStyle="bold" />
 
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -64,8 +64,7 @@
         android:layout_marginTop="@dimen/space_20"
         android:text="@string/spam_header_text"
         android:textColor="@color/grey_faded"
-        android:textSize="16sp"
-        app:fontName="Roboto-Regular.ttf" />
+        android:textSize="16sp" />
 
 
     <androidx.appcompat.widget.AppCompatSpinner
@@ -109,6 +108,6 @@
         android:text="@string/spam_send"
         android:textColor="@color/white"
         android:textSize="22sp"
-        app:fontName="Roboto-Bold.ttf" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
