--- a/MyCity4Kids/MyCity4Kids/res/layout/featured_on_item_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/featured_on_item_cell.xml
@@ -22,7 +22,7 @@
         android:text="@string/featured_on"
         android:textColor="@color/campaign_515151"
         android:textSize="16sp"
-        app:fontName="Roboto-Bold.ttf" />
+        android:textStyle="bold" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/author_name"
@@ -33,8 +33,7 @@
         android:layout_toRightOf="@id/img"
         android:text="@string/featured_on"
         android:textColor="@color/grey_faded"
-        android:textSize="12sp"
-        app:fontName="Roboto-Regular.ttf" />
+        android:textSize="12sp" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/follow"
@@ -50,8 +49,7 @@
         android:paddingRight="@dimen/space_16"
         android:text="@string/ad.follow_author"
         android:textColor="#E12049"
-        android:textSize="12sp"
-        app:fontName="Roboto-Regular.ttf" />
+        android:textSize="12sp" />
 
     <View
         android:layout_width="match_parent"
