--- a/MyCity4Kids/MyCity4Kids/res/drawable/rootlayout_rounded_corner_with_transparent_background.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/rootlayout_rounded_corner_with_transparent_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffffff" />
+    <solid android:color="@color/transparent" />
 
     <stroke
-        android:width="3dp"
+        android:width="1dp"
         android:color="#fff" />
 
     <padding
@@ -13,6 +13,5 @@
         android:top="1dp" />
 
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="@dimen/space_10" />
+       android:radius="3dp" />
 </shape>
