--- a/MyCity4Kids/MyCity4Kids/res/drawable/rootlayout_rounded_with_radius_15.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/rootlayout_rounded_with_radius_15.xml
@@ -1,18 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#ffffffff" />
-
-    <stroke
-        android:width="3dp"
-        android:color="#fff" />
-
     <padding
         android:bottom="1dp"
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
 
-    <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="@dimen/space_10" />
+    <corners android:radius="15dp" />
 </shape>
