--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_collections.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_collections.xml
@@ -18,6 +18,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_arroow"
