--- a/MyCity4Kids/MyCity4Kids/res/layout/add_collection_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_collection_activity.xml
@@ -64,10 +64,33 @@
 
         android:background="#97979733" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="visible">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/addCollectionRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white" />
+
 
 </LinearLayout>
