--- a/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
@@ -39,8 +39,8 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/user_image"
             android:letterSpacing="-0.02"
-            android:text="jshdkhskdhkk"
             android:padding="10dp"
+            android:text="jshdkhskdhkk"
             android:textColor="#E6FFFFFF"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -53,6 +53,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/bookmark"
+            android:alpha="0.8"
             android:background="@drawable/rounded_corner"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
@@ -60,19 +61,18 @@
             android:paddingBottom="5dp"
             android:text="Follow"
             android:textAllCaps="false"
-            android:alpha="0.8"
             android:textColor="#FFFFFF"
             android:textSize="11sp"
-            app:fontName="open_sans.ttf"/>
+            app:fontName="open_sans.ttf" />
 
         <ImageView
             android:id="@+id/bookmark"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:padding="12dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="4dp"
+            android:padding="12dp"
             android:src="@drawable/ic_bookmark"
             android:tint="#FFFFFF"
             android:visibility="visible" />
@@ -94,12 +94,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_top_layout"
+        android:letterSpacing="-0.02"
+        android:lineSpacingExtra="5sp"
         android:paddingStart="18dp"
         android:paddingTop="8dp"
         android:paddingEnd="18dp"
         android:paddingBottom="8dp"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="5sp"
         android:textColor="#CCFFFFFF"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -190,9 +190,9 @@
             android:id="@+id/heart"
             android:layout_width="46dp"
             android:layout_height="46dp"
-            android:padding="12dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="6dp"
+            android:padding="12dp"
             android:tint="@color/white"
             app:srcCompat="@drawable/ic_likevideo" />
 
@@ -200,9 +200,9 @@
             android:id="@+id/share"
             android:layout_width="46dp"
             android:layout_height="46dp"
-            android:padding="12dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/heart"
+            android:padding="12dp"
             android:tint="@color/white"
             app:srcCompat="@drawable/ic_sharevideo" />
 
@@ -210,22 +210,35 @@
             android:id="@+id/whatsapp"
             android:layout_width="46dp"
             android:layout_height="46dp"
-            android:padding="12dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/share"
             android:alpha="0.85"
+            android:padding="12dp"
             android:src="@drawable/ic_whats_app"
+            android:tint="@color/white" />
+
+
+        <ImageView
+            android:id="@+id/collectionAdd"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/whatsapp"
+            android:alpha="0.85"
+            android:padding="12dp"
+            android:src="@drawable/collectionadd"
             android:tint="@color/white" />
 
         <ImageView
             android:id="@+id/comment"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="12dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/commentCount"
             android:alpha="0.9"
+            android:padding="12dp"
             android:src="@drawable/ic_comments"
             android:tint="@color/white" />
 
