--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -167,7 +167,7 @@
                 android:paddingTop="12dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="12dp"
-                android:src="@drawable/ic_share_white"
+                android:src="@drawable/collectionadd"
                 android:tint="@color/app_red" />
 
             <LinearLayout
