--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
@@ -153,7 +153,7 @@
             android:layout_alignParentBottom="true"
             android:background="#80000000"
             android:paddingBottom="5dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <View
                 android:id="@+id/sepaartorView"
