--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
@@ -1,30 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:padding="@dimen/space_15"
-        android:src="@drawable/ic_more_vert_black_24dp"
-        android:tint="@color/black" />
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/setting"
-        android:textSize="@dimen/space_15" />
+        android:layout_margin="0dp"
+        android:padding="0dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/collectionImageVIEW"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/desert" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:background="#40000000" />
+
+
+            <RelativeLayout
+                android:id="@+id/upperToolbarHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/space_10"
+                android:layout_marginTop="@dimen/space_20"
+                android:visibility="visible">
+
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutForFollowingShare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="@dimen/space_10"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/followFollowingTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="@dimen/space_10"
+                        android:background="@drawable/rootlayout_rounded_corner_with_transparent_background"
+                        android:paddingLeft="@dimen/space_10"
+                        android:paddingTop="@dimen/space_5"
+                        android:paddingRight="@dimen/space_10"
+                        android:paddingBottom="@dimen/space_5"
+                        android:text="Following"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        android:visibility="gone"
+                        app:fontName="Helvetica Bold.ttf" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/share"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/sharee"
+
+                        android:tint="@color/white" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/setting"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/space_15"
+                        android:src="@drawable/ic_more"
+                        android:tint="@color/white" />
+
+
+                </LinearLayout>
+
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/collectionNameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/space_5"
+                    android:layout_toStartOf="@+id/linearLayoutForFollowingShare"
+                    android:layout_toEndOf="@id/back"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="My top blogs"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/space_18"
+                    app:fontName="Helvetica Bold.ttf" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/back_arroow" />
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/upperToolbarHeader"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/space_40"
+                android:padding="@dimen/space_10"
+
+                >
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/followersCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="121"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"
+                    app:fontName="OpenSans-Bold.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/followersTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/space_10"
+                    android:layout_toEndOf="@id/followersCount"
+                    android:text="Follower"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:fontName="open_sans.ttf" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/rightArrow"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/followersTextView"
+                    android:src="@drawable/arrow_right"
+                    android:tint="@color/white" />
+
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/muteVideoSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="visible to all"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:switchPadding="@dimen/space_10" />
+
+
+            </RelativeLayout>
+        </RelativeLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectionItemRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/setting" />
+        android:layout_below="@id/toolbar" />
 
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:background="@color/white"
+        app:duration="1000">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </RelativeLayout>
+
