--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_items_list_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_items_list_adapter.xml
@@ -1,17 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/space_16"
+    android:elevation="@dimen/space_10">
 
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/text"
+    <RelativeLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="dfsfdgsdfgfdhfghdgfhgjydjgyj"
-        android:textColor="@color/black"
-        android:textSize="@dimen/space_15" />
+        android:layout_margin="@dimen/space_16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-</RelativeLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/articleImageView"
+            android:layout_width="130dp"
+            android:layout_height="@dimen/space_100"
+            android:scaleType="centerCrop"
+            android:src="@drawable/desert" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/articleVideoShortStoryIcon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignRight="@id/articleImageView"
+            android:layout_alignBottom="@id/articleImageView"
+            android:background="#000000"
+            android:padding="@dimen/space_5"
+            android:src="@drawable/ic_video"
+            android:tint="@color/white" />
+
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/articleTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/space_16"
+            android:layout_marginRight="@dimen/space_10"
+            android:layout_toRightOf="@id/articleImageView"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="3"
+            android:text="dfsfdgsdfgfdhfghdgfhgjydjgy"
+            android:textColor="#515151"
+            android:textSize="@dimen/space_15"
+            app:fontName="Helvetica Bold.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/articleAuthorName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/articleImageView"
+            android:layout_marginLeft="@dimen/space_16"
+            android:layout_marginBottom="@dimen/space_10"
+            android:layout_toLeftOf="@id/viewCountTextView"
+            android:layout_toRightOf="@id/articleImageView"
+            android:text="bcjsbdvjhfdbj"
+            android:textColor="#9B9B9B"
+            android:textSize="12sp" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/viewCountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/articleImageView"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="@dimen/space_10"
+            android:paddingLeft="@dimen/space_10"
+            android:text="122"
+            android:textColor="#979797" />
+
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
