--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -12,6 +12,7 @@
 
     <color name="app_red_50_opacity">#80D54058</color>
     <color name="fab_button_bottom_sheet">#FAF6F7</color>
+    <color name="switch_button_green_collection">#90BC5F</color>
 
     <color name="app_cyan">#39B47E</color>
     <color name="app_trans_red">#D54058</color>
