--- a/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
@@ -75,6 +75,17 @@
                             app:civ_shadow="false"
                             app:civ_shadow_radius="1" />
 
+                        <ImageView
+                            android:id="@+id/crownImageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="4dp"
+                            android:background="@drawable/profile_crown_bg"
+                            android:layout_alignTop="@+id/profileImageView"
+                            android:layout_marginTop="60dp"
+                            android:layout_marginStart="32dp"
+                            android:src="@drawable/add_photo" />
+
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/authorNameTextView"
                             android:layout_width="wrap_content"
@@ -272,18 +283,18 @@
                             </LinearLayout>
 
                             <com.mycity4kids.widget.CustomFontTextView
-                                android:id="@+id/shareTextView"
-                                android:layout_width="120dp"
+                                android:id="@+id/sharePrivateTextView"
+                                android:layout_width="160dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:layout_marginEnd="16dp"
+                                android:layout_marginEnd="10dp"
                                 android:background="@drawable/update_profile_bg"
-                                android:elevation="10dp"
+                                android:elevation="6dp"
                                 android:gravity="center"
                                 android:paddingStart="30dp"
-                                android:paddingTop="8dp"
+                                android:paddingTop="10dp"
                                 android:paddingEnd="30dp"
-                                android:paddingBottom="8dp"
+                                android:paddingBottom="10dp"
                                 android:text="SHARE"
                                 android:textColor="@color/white"
                                 app:fontName="oswald_regular.ttf"
@@ -292,21 +303,61 @@
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/analyticsTextView"
-                                android:layout_width="120dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="4dp"
+                                android:layout_marginStart="10dp"
+                                android:background="@drawable/profile_analytics_btn_bg"
+                                android:drawableStart="@drawable/tab1"
+                                android:drawablePadding="-30dp"
+                                android:elevation="6dp"
+                                android:gravity="center"
+                                android:paddingStart="30dp"
+                                android:paddingTop="10dp"
+                                android:paddingEnd="10dp"
+                                android:paddingBottom="10dp"
+                                android:text="Analytics"
+                                android:textColor="@color/app_red"
+                                app:fontName="oswald_regular.ttf"
+                                app:layout_constraintStart_toStartOf="@+id/followerContainer"
+                                app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/followAuthorTextView"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
                                 android:layout_marginEnd="10dp"
-                                android:background="@drawable/profile_analytics_btn_bg"
-                                android:drawableLeft="@drawable/tab1"
-                                android:drawablePadding="-10dp"
-                                android:elevation="10dp"
+                                android:background="@drawable/update_profile_bg"
+                                android:elevation="6dp"
                                 android:gravity="center"
-                                android:paddingStart="16dp"
-                                android:paddingTop="8dp"
-                                android:paddingEnd="10dp"
-                                android:paddingBottom="8dp"
-                                android:text="Analytics"
+                                android:paddingStart="30dp"
+                                android:paddingTop="10dp"
+                                android:paddingEnd="30dp"
+                                android:paddingBottom="10dp"
+                                android:text="FOLLOW"
+                                android:textColor="@color/white"
+                                android:visibility="gone"
+                                app:fontName="oswald_regular.ttf"
+                                app:layout_constraintEnd_toStartOf="@+id/followerContainer"
+                                app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/sharePublicTextView"
+                                android:layout_width="160dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="4dp"
+                                android:layout_marginStart="10dp"
+                                android:background="@drawable/profile_analytics_btn_bg"
+                                android:elevation="6dp"
+                                android:gravity="center"
+                                android:paddingStart="30dp"
+                                android:paddingTop="10dp"
+                                android:paddingEnd="30dp"
+                                android:paddingBottom="10dp"
+                                android:text="SHARE"
                                 android:textColor="@color/app_red"
+                                android:visibility="gone"
                                 app:fontName="oswald_regular.ttf"
                                 app:layout_constraintStart_toStartOf="@+id/followerContainer"
                                 app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
